# tlisp

./: Cargo.toml  README.md  prelude.tl
src/: environment.rs  eval.rs  lexer.rs  lib.rs  main.rs  object.rs  operators.rs  parser.rs
src/runtime/: list.rs  mod.rs  string.rs
