[package]
name = "tlisp"
version = "0.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/bondiano/tlisp"
description = """
Lisp interpreter in Rust
"""

[dependencies]
linefeed = {version = "0.6.0", optional = true}

[features]
build-binary = ["linefeed"]

[lib]
name = "tlisp"
path = "src/lib.rs"

[[bin]]
name = "tlisp"
path = "src/main.rs"
required-features = ["build-binary"]
