[package]
name = "tlisp"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bondiano/tlisp"
keywords = ["LISP", "cli", "languages"]
description = """
Lisp interpreter in Rust
"""

[dependencies]
dyn-fmt = "0.4.0"
linefeed = {version = "0.6.0", optional = true}

[features]
bin = ["linefeed"]

[lib]
name = "tlisp"
path = "src/lib.rs"

[[bin]]
name = "tlisp"
path = "src/main.rs"
required-features = ["bin"]
